add functionality to add facility
